Reemplaza Collectors.toList por Stream.toList en ProveedorServiceImpl